// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/viewHeader/emptyCardButton return EmptyCardButton 1`] = `
<div>
  <div
    aria-label="Empty card"
    class="MenuOption TextOption menu-option bold-menu-text"
    role="button"
  >
    <div
      class="d-flex"
    >
      <div
        class="menu-option__icon"
      >
        <svg
          class="CardIcon Icon"
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="40"
            rx="3"
            ry="3"
            width="60"
            x="20"
            y="30"
          />
        </svg>
      </div>
    </div>
    <div
      class="menu-option__content"
    >
      <div
        class="menu-name"
      >
        Empty card
      </div>
    </div>
    <div
      aria-label="menuwrapper"
      class="MenuWrapper"
      role="button"
    >
      <button
        class="IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/viewHeader/emptyCardButton return EmptyCardButton and Set Template 1`] = `
<div>
  <div
    aria-label="Empty card"
    class="MenuOption TextOption menu-option bold-menu-text"
    role="button"
  >
    <div
      class="d-flex"
    >
      <div
        class="menu-option__icon"
      >
        <svg
          class="CardIcon Icon"
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="40"
            rx="3"
            ry="3"
            width="60"
            x="20"
            y="30"
          />
        </svg>
      </div>
    </div>
    <div
      class="menu-option__content"
    >
      <div
        class="menu-name"
      >
        Empty card
      </div>
    </div>
    <div
      aria-label="menuwrapper"
      class="MenuWrapper override menuOpened"
      role="button"
    >
      <button
        class="IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      <div
        class="Menu noselect left "
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div>
              <div
                aria-label="Set as default"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <svg
                      class="CheckIcon Icon"
                      viewBox="0 0 100 100"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <polyline
                        points="20,60 40,80 80,40"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Set as default
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="d-flex"
              >
                <div
                  class="noicon"
                />
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/viewHeader/emptyCardButton return EmptyCardButton and addCard 1`] = `
<div>
  <div
    aria-label="Empty card"
    class="MenuOption TextOption menu-option bold-menu-text"
    role="button"
  >
    <div
      class="d-flex"
    >
      <div
        class="menu-option__icon"
      >
        <svg
          class="CardIcon Icon"
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="40"
            rx="3"
            ry="3"
            width="60"
            x="20"
            y="30"
          />
        </svg>
      </div>
    </div>
    <div
      class="menu-option__content"
    >
      <div
        class="menu-name"
      >
        Empty card
      </div>
    </div>
    <div
      aria-label="menuwrapper"
      class="MenuWrapper"
      role="button"
    >
      <button
        class="IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
    </div>
  </div>
</div>
`;
